<resources>
    <string name="app_name">CourierX</string>
    <string name="tin_tin_rastapopulous">Tin Tin Rastapopulous</string>
    <string name="tintinadventures_gmail_com">tintinadventures@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_ll_deliver_your_package_to_wherever_you_want_whenever_you_want">We’ll deliver your package to wherever you want ; whenever you want!</string>
    <string name="please_chose_a_service_to_get_started">Please chose a service to get started!</string>
    <string name="welcome_to_courierx">Welcome to CourierX</string>
    <string name="track_package">Track Package</string>
    <string name="send_package">Send Package</string>
    <string name="recepient">Recipient</string>
    <string name="sender">Sender</string>
    <string name="added_date">Added Date</string>
    <string name="picked_up_date">Picked Up Date</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="last_tracked_location">Last Tracked Location</string>
    <string name="sheduled_date">Sheduled Date</string>
    <string name="track_id">Track ID</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="package_details">Package Details</string>
    <string name="is_this_fragile">Is this fragile?</string>
    <string name="proceed">PROCEED</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="message_delivery_person">Message delivery person</string>
    <string name="rate_us">Rate us</string>
    <string name="xu345907n65d">XU345907N65D</string>
    <string name="tracking_id">Tracking ID:</string>
    <string name="update_status">Update Status</string>
    <string name="select_recepient">Select Recipient</string>
    <string name="please_enter_the_user_id_of_the_recepient">Please enter the User ID of the Recipient</string>
    <string name="search">Search</string>
    <string name="search_2">SEARCH</string>
    <string name="package_id">Package ID</string>
    <string name="package_discription">Package Discription</string>
    <string name="switch_to_me">Switch To Me</string>
    <string name="switch_to_sent_packages">Switch to Sent Packages</string>
    <string name="switch_to_received_packages">Switch to Received Packages</string>
    <string name="trak_package">Track Package?</string>
    <string name="sender_receiver">Sender/Receiver</string>
    <string name="receiver">Receiver</string>
    <string name="status">Status</string>
    <string name="pkgdetails">Package Details</string>
    <string name="update">UPDATE</string>
    <string name="update_package_details">Update Package Details</string>
    <string name="add_package_details">Add Package Details</string>

</resources>