<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthScreens.Login">

    <TextView
        android:id="@+id/needAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="Need an Account?"
        android:textColor="@color/btn_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Login to CourierX"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needAccountBtn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/we_ll_deliver_your_package_to_wherever_you_want_whenever_you_want"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpRedirect" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInLayoutEmail"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLayoutPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInLayoutPassword"
        android:layout_width="290dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="@string/enter_your_password"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/signInLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInInputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>